# physionix

./: .gitignore  Doxyfile  LICENSE  README.md  build.sh  installdependencies.sh
.github/workflows/: c-cpp.yml
code/EMGSensor/: EMG_sensor.cpp  EMG_sensor.h  I2Cdev.cpp  I2Cdev.h
include/: SignalInput.h
media/Physionix-logo/: info.txt
scripts/: installdependencies.sh
src/: EMG.cpp  EMG_Rpi.cpp  Makefile  SignalInput.cpp  main.cpp
src/EMGActuation/: EMGActuation.cpp  MakeFile
src/EMGApi/: CMakeLists.txt  EMGSensor.h  Sensor.h  Server.h  demo_sensor_server.cpp  emg_server.cpp
src/EMGApi/fastcgi/: CMakeLists.txt
src/EMGApi/include/: fakesensor.h  json_fastcgi_web_api.h
src/EMGApi/website/: README.md  index.html  nginx-sites-enabled-default  setup.sh
src/EMGApi/website/include/: main.js
src/EMGData/: EMGdata.cpp  EMGdata.h
src/EMGLearning/: emg_learning.cpp  emg_learning.h
src/EMGLearning/sample-application/: Makefile  main.cpp
src/EMGProcessing/: emg_filter.cpp  emg_filter.h
src/EMGProcessing/include/: emg_filter.h
src/EMGProcessing/sample-application/: Makefile  main.cpp
src/EMGSensor/: ADS1115.cpp  ADS1115.h  EMG_sensor.cpp  I2Cdev.cpp
src/EMGSensor/include/: EMG_sensor.h  I2Cdev.h
src/EMGSensor/sample-application/: Makefile  main.cpp  makefile
src/EMGSensor/unittest/: main.cpp  makefile  output
