cmake_minimum_required(VERSION 3.10.0)
project (EMGApi)
include_directories(fastcgi)
add_executable(PhysionixServer emg_server.cpp)
set (CMAKE_CXX_STANDARD 14)
find_package (Threads)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
TARGET_LINK_LIBRARIES(PhysionixServer fcgi rt ${JSONCPP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
